add title to homepage

--- a/index.html
+++ b/index.html
@@ -7,16 +7,18 @@
     <title>Sing Like Billy</title>
 </head>
 <body>
-    <head>
+
+    <header>
+        <h1>Sing Like Billy</h1>
         <nav> 
             <li><a href="index.html">Login</a></li>
             <li><a href="play.html">Play</a></li>
             <li><a href="scores.html">Scoreboard</a></li>
             <li><a href="about.html">About</a></li>
         </nav>
-    </head>
+    </header>
     <main>
-        <h1>Sing Like Billy</h1>
+        <h1>Welcome</h1>
     </main>
     <footer>
         <span>Tran Diep</span>
