--- a/play.html
+++ b/play.html
@@ -18,7 +18,12 @@
         </nav>
     </header>
     <main>
-        <h1>Welcome</h1>
+        <h1>Play</h1>
+        <button type="button">Billy, sing!</button>
+        <button type="button">Note 1</button>
+        <button type="button">Note 2</button>
+        <button type="button">Note 3</button>
+        <button type="button">Note 4</button>
     </main>
     <footer>
         <span>Tran Diep</span>
