add scoreboard table

--- a/play.html
+++ b/play.html
@@ -24,6 +24,7 @@
         <button type="button">Note 2</button>
         <button type="button">Note 3</button>
         <button type="button">Note 4</button>
+        <button type="button">Your turn!</button>
     </main>
     <footer>
         <span>Tran Diep</span>
