--- a/scores.html
+++ b/scores.html
@@ -18,7 +18,33 @@
         </nav>
     </header>
     <main>
-        <h1>Welcome</h1>
+        <h1>Scoreboard</h1>
+        <table>
+            <tr>
+                <th>Rank</th>
+                <th>Name</th>
+                <th>Score</th>
+                <th>Date</th>
+            </tr>
+            <tr>
+                <td>1</td>
+                <td>Dogtor Tron</td>
+                <td>120</td>
+                <td>05/10/2023</td>
+            </tr>
+            <tr>
+                <td>2</td>
+                <td>Dgr Troggy</td>
+                <td>101</td>
+                <td>05/11/2023</td>
+              </tr>
+            <tr>
+                <td>3</td>
+                <td>Bella</td>
+                <td>12</td>
+                <td>05/12/2023</td>
+            </tr>
+          </table>
     </main>
     <footer>
         <span>Tran Diep</span>
