add live updates

--- a/play.html
+++ b/play.html
@@ -25,6 +25,12 @@
         <button type="button">Note 3</button>
         <button type="button">Note 4</button>
         <button type="button">Your turn!</button>
+        <section>
+            <p>TuckerBudzyn just scored 9!</p>
+            <p>troggy.the.doggy just scored 101!</p>
+            <p>dognamedstella left the game</p>
+            <p>good.boy.ollie entered the game</p>
+        </section>
     </main>
     <footer>
         <span>Tran Diep</span>
