add container-fluid to header and footer

--- a/play.html
+++ b/play.html
@@ -16,7 +16,7 @@
 </head>
 <body>
 
-    <header>
+    <header class="container-fluid">
         <h1>Sing Like Billy</h1>
         <nav> 
             <li><a href="index.html">Login</a></li>
@@ -75,7 +75,7 @@
     
     
     </main>
-    <footer>
+    <footer class="container-fluid">
         <span>Tran Diep</span>
         <br />
         <a href="https://github.com/dogtortron/startup">GitHub</a>
