--- a/scores.html
+++ b/scores.html
@@ -4,11 +4,19 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="main.css" />
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65"
+      crossorigin="anonymous"
+    />
+
     <title>Sing Like Billy</title>
 </head>
 <body>
 
-    <header>
+    <header class="container-fluid">
         <h1>Sing Like Billy</h1>
         <nav> 
             <li><a href="index.html">Login</a></li>
@@ -17,36 +25,82 @@
             <li><a href="about.html">About</a></li>
         </nav>
     </header>
-    <main>
+    <main class="container-fluid">
+        <div class="scoreboard">
         <h1>Scoreboard</h1>
-        <table>
+        <table class="table table-info table-striped-columns">
+            <thead class="table-light">
             <tr>
-                <th>Rank</th>
-                <th>Name</th>
-                <th>Score</th>
-                <th>Date</th>
+                <th scope="col">#</th>
+                <th scope="col">Name</th>
+                <th scope="col">Score</th>
+                <th scope="col">Date</th>
             </tr>
+            </thead>
             <tr>
                 <td>1</td>
-                <td>Dogtor Tron</td>
+                <td>Dogtor Trog</td>
                 <td>120</td>
                 <td>05/10/2023</td>
             </tr>
             <tr>
                 <td>2</td>
-                <td>Dgr Troggy</td>
+                <td>Anya the GSD</td>
                 <td>101</td>
                 <td>05/11/2023</td>
               </tr>
             <tr>
                 <td>3</td>
-                <td>Bella</td>
-                <td>12</td>
+                <td>Baby Bella</td>
+                <td>90</td>
+                <td>05/12/2023</td>
+            </tr>
+            <tr>
+                <td>4</td>
+                <td>Tucker Budzyn</td>
+                <td>77</td>
+                <td>05/12/2023</td>
+            </tr>
+            <tr>
+                <td>5</td>
+                <td>Dog Named Stella</td>
+                <td>50</td>
+                <td>05/12/2023</td>
+            </tr>
+            <tr>
+                <td>6</td>
+                <td>Loki the Wolfdog</td>
+                <td>42</td>
+                <td>05/12/2023</td>
+            </tr>
+            <tr>
+                <td>7</td>
+                <td>Good Boy Ollie</td>
+                <td>40</td>
+                <td>05/12/2023</td>
+            </tr>
+            <tr>
+                <td>8</td>
+                <td>Doug the Pug</td>
+                <td>35</td>
+                <td>05/12/2023</td>
+            </tr>
+            <tr>
+                <td>9</td>
+                <td>Ellie and Emma</td>
+                <td>27</td>
+                <td>05/12/2023</td>
+            </tr>
+            <tr>
+                <td>10</td>
+                <td>Dexter the Balancing Dog</td>
+                <td>20</td>
                 <td>05/12/2023</td>
             </tr>
           </table>
+        </div>
     </main>
-    <footer>
+    <footer class="container-fluid">
         <span>Tran Diep</span>
         <br />
         <a href="https://github.com/dogtortron/startup">GitHub</a>
