--- a/scores.html
+++ b/scores.html
@@ -21,7 +21,7 @@
         <nav> 
             <li><a href="index.html">Login</a></li>
             <li><a href="play.html">Play</a></li>
-            <li><a href="scores.html">Scoreboard</a></li>
+            <li><a href="scores.html">Score</a></li>
             <li><a href="about.html">About</a></li>
         </nav>
     </header>
