--- a/scores.html
+++ b/scores.html
@@ -27,7 +27,7 @@
     </header>
     <main class="container-fluid">
         <div class="scoreboard">
-        <h1>Scoreboard</h1>
+        <h1>Score</h1>
         <table class="table table-info table-striped-columns">
             <thead class="table-light">
             <tr>
