--- a/play.html
+++ b/play.html
@@ -69,7 +69,7 @@
             <button type="button" class="btn btn-primary">Note 4</button>
         </section>
         <section class="control">
-            <div>Your Score: <span class="score">99</span></div>
+            <div><p>Your Score: <span class="score">99</span></p></div>
             <button type="button" class="btn btn-primary">Reset</button>
         </section>
         </div>
