--- a/index.html
+++ b/index.html
@@ -16,9 +16,9 @@
 </head>
 <body>
     <header class="container-fluid">
-        
-        <h1>Sing Like Billy</h1>
-        <nav> 
+        <nav class="navbar navbar-expand-sm"> 
+            <a class="navbar-brand" href="#">
+                <img src="/billy.svg" width="70">Sing Like Billy</a>
             <li><a href="index.html">Login</a></li>
             <li><a href="play.html">Play</a></li>
             <li><a href="scores.html">Score</a></li>
