add toggle to menu

--- a/index.html
+++ b/index.html
@@ -17,13 +17,21 @@
 <body>
     <header class="container-fluid">
         <nav class="navbar navbar-expand-sm"> 
-            <a class="navbar-brand" href="#">
+            <a class="navbar-brand" href="index.html">
                 <img src="/billy.svg" width="70">Sing Like Billy</a>
-            <li><a href="index.html">Login</a></li>
-            <li><a href="play.html">Play</a></li>
-            <li><a href="scores.html">Score</a></li>
-            <li><a href="about.html">About</a></li>
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarSupportedContent">
+            <ul class="navbar-nav mr-auto">
+            <li class="nav-item active"><a class="nav-link" href="index.html">Login</a></li>
+            <li class="nav-item"><a class="nav-link" href="play.html">Play</a></li>
+            <li class="nav-item"><a class="nav-link" href="scores.html">Score</a></li>
+            <li class="nav-item"><a class="nav-link" href="about.html">About</a></li>
+            </ul>
+            </div>  
         </nav>
+
     </header>
     <main class="container-fluid">
         <svg class="mainSVG" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" version="1.1" id="Layer_1" x="0px" y="0px"  viewBox="0 0 512 512" enable-background="new 0 0 512 512" xml:space="preserve">
