--- a/about.html
+++ b/about.html
@@ -11,8 +11,8 @@
       rel="stylesheet"
       integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65"
       crossorigin="anonymous"
-    />   
-
+    />
+    <script src="index.js"></script>
     <title>Sing Like Billy</title>
 </head>
 <body>
