--- a/scores.html
+++ b/scores.html
@@ -11,7 +11,7 @@
       integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65"
       crossorigin="anonymous"
     />
-    <script src="index.js"></script>
+    <script defer src="scores.js"></script>
     <title>Sing Like Billy</title>
 </head>
 <body>
@@ -45,66 +45,7 @@
                 <th scope="col">Date</th>
             </tr>
             </thead>
-            <tr>
-                <td>1</td>
-                <td>Dogtor Trog</td>
-                <td>120</td>
-                <td>05/10/2023</td>
-            </tr>
-            <tr>
-                <td>2</td>
-                <td>Anya the GSD</td>
-                <td>101</td>
-                <td>05/11/2023</td>
-              </tr>
-            <tr>
-                <td>3</td>
-                <td>Baby Bella</td>
-                <td>90</td>
-                <td>05/12/2023</td>
-            </tr>
-            <tr>
-                <td>4</td>
-                <td>Tucker Budzyn</td>
-                <td>77</td>
-                <td>05/12/2023</td>
-            </tr>
-            <tr>
-                <td>5</td>
-                <td>Dog Named Stella</td>
-                <td>50</td>
-                <td>05/12/2023</td>
-            </tr>
-            <tr>
-                <td>6</td>
-                <td>Loki the Wolfdog</td>
-                <td>42</td>
-                <td>05/12/2023</td>
-            </tr>
-            <tr>
-                <td>7</td>
-                <td>Good Boy Ollie</td>
-                <td>40</td>
-                <td>05/12/2023</td>
-            </tr>
-            <tr>
-                <td>8</td>
-                <td>Doug the Pug</td>
-                <td>35</td>
-                <td>05/12/2023</td>
-            </tr>
-            <tr>
-                <td>9</td>
-                <td>Ellie and Emma</td>
-                <td>27</td>
-                <td>05/12/2023</td>
-            </tr>
-            <tr>
-                <td>10</td>
-                <td>Dexter the Balancing Dog</td>
-                <td>20</td>
-                <td>05/12/2023</td>
-            </tr>
+            <tbody id="scores"></tbody>
           </table>
         </div>
     </main>
