--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
       integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65"
       crossorigin="anonymous"
     />
+    <script src="login.js"></script>
     <script defer src="index.js"></script>
     <title>Sing Like Billy</title>
 </head>
@@ -57,8 +58,8 @@
         <h1>Login</h1>
         <form action="play.html" method="get">
             <label for="name">Name</label>
-            <input type="text" id="name" placeholder="Your name here">
-            <button type="submit" class="btn btn-primary">Login</button>
+            <input type="text" id="name" placeholder="Your name here"/>
+            <button type="submit" class="btn btn-primary" onclick="login()">Login</button>
         </form>
     </main>
     <footer class="container-fluid">
