--- a/play.html
+++ b/play.html
@@ -36,8 +36,8 @@
            
     </header>
     <main>
-    <div class="message">
-        <section class="playerMessage">
+    <div class="message" id="player-messages">
+        <section class="playerMessage" id="player-messages">
             <p>TuckerBudzyn just scored 9!</p>
             <p>troggy.the.doggy just scored 101!</p>
             <p>dognamedstella left the game</p>
