--- a/play.html
+++ b/play.html
@@ -36,12 +36,8 @@
            
     </header>
     <main>
-    <div class="message" id="player-messages">
+    <div class="message">
         <section class="playerMessage" id="player-messages">
-            <p>TuckerBudzyn just scored 9!</p>
-            <p>troggy.the.doggy just scored 101!</p>
-            <p>dognamedstella left the game</p>
-            <p>good.boy.ollie entered the game</p>
         </section>
     </div>
     <div class="play">
