--- a/about.html
+++ b/about.html
@@ -12,7 +12,7 @@
       integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65"
       crossorigin="anonymous"
     />
-    <script src="index.js"></script>
+    <!-- <script src=""></script> -->
     <title>Sing Like Billy</title>
 </head>
 <body>
