accommodate things for getBird endpoint

--- a/public/about.html
+++ b/public/about.html
@@ -12,7 +12,7 @@
       integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65"
       crossorigin="anonymous"
     />
-    <!-- <script src=""></script> -->
+    <script src="about.js"></script>
     <title>Sing Like Billy</title>
 </head>
 <body>
@@ -41,10 +41,10 @@
         </div>
         <div class="birdOfTheDay">
         <section>
-            <h2>Bird of the day</h2>
-            <h3 class="birdName">Northern Cardinal</h3>
-            <p>The male Northern Cardinal is perhaps responsible for getting more people to open up a field guide than any other bird. They’re a perfect combination of familiarity, conspicuousness, and style: a shade of red you can’t take your eyes off. Even the brown females sport a sharp crest and warm red accents. Cardinals don’t migrate and they don’t molt into a dull plumage, so they’re still breathtaking in winter’s snowy backyards. In summer, their sweet whistles are one of the first sounds of the morning.</p>
-            <img class="birdImage" src="https://www.bird-sounds.net/images/northern-cardinal.jpg">
+            <h2>Bird of the moment</h2>
+            <!-- <h3 class="birdName">Northern Cardinal</h3> -->
+            <p id="birdInfo"></p>
+            <img id="birdImage" src="">
             <audio controls src="https://www.bird-sounds.net/sounds/1630.mp3"></audio>
         </section>
         </div>
