--- a/public/index.html
+++ b/public/index.html
@@ -1,18 +1,20 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
+<head> 
+    <!-- #playerName, #username, #userPassword, #msgModal, .modal-body .msg -->
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
     <link rel="stylesheet" href="main.css" />
+    <link rel="stylesheet" href="login.css" />
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css"
       rel="stylesheet"
       integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65"
       crossorigin="anonymous"
     />
-    <script src="login.js"></script>
+    <script defer src="login.js"></script>
     <title>Sing Like Billy</title>
 </head>
 <body>
@@ -26,9 +28,9 @@
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav mr-auto">
             <li class="nav-item active"><a class="nav-link" href="index.html">Login</a></li>
-            <li class="nav-item"><a class="nav-link" href="play.html">Play</a></li>
+            <!-- <li class="nav-item"><a class="nav-link" href="play.html">Play</a></li>
             <li class="nav-item"><a class="nav-link" href="scores.html">Score</a></li>
-            <li class="nav-item"><a class="nav-link" href="about.html">About</a></li>
+            <li class="nav-item"><a class="nav-link" href="about.html">About</a></li> -->
             </ul>
             </div>  
         </nav>
@@ -52,13 +54,49 @@
             <path fill="#008000" opacity="1.000000" stroke="none" d=" M430.639282,215.938004   C431.519806,217.084061 431.850006,218.036804 431.396820,219.323471   C430.430634,222.066727 430.659180,225.312943 427.952423,227.273193   C427.747437,227.421631 426.825592,227.089828 426.793121,226.890640   C426.271118,223.686905 427.038177,220.708252 428.586029,217.908386   C429.045319,217.077637 429.189148,215.938797 430.639282,215.938004  z"/>
             <path fill="#008000" opacity="1.000000" stroke="none" d=" M441.932495,293.779053   C437.816132,291.543365 436.254852,288.041595 434.766602,283.452454   C438.983337,285.619720 440.802368,288.655060 442.042480,292.571411   C442.198944,293.237366 442.308014,293.545502 441.932495,293.779053  z"/>
             <path fill="#008000" opacity="1.000000" stroke="none" d=" M330.119080,92.005249   C338.978088,92.123093 343.846405,100.395622 339.300293,107.595024   C336.656494,111.781822 331.846436,111.386871 327.510498,110.603874   C323.815216,109.936577 321.539612,107.863785 321.991058,103.690697   C322.133179,102.376701 321.987793,101.033615 322.012543,99.704559   C322.127747,93.511261 323.263336,92.376534 330.119080,92.005249  z"/>
-            </svg>
+        </svg>
         <h1>Login</h1>
-        <form action="play.html" method="get">
+        <!-- <form action="play.html" method="get">
             <label for="name">Name</label>
             <input type="text" id="name" placeholder="Your name here"/>
             <button type="submit" class="btn btn-primary" onclick="login()">Login</button>
-        </form>
+        </form> -->
+    <div>
+        <!-- Displayed when needing authentication -->
+        <div id="loginControls" style="display: none">
+            <div class="input-group mb-3">
+                <span class="input-group-text">Email</span>
+                <input class="form-control" type="text" id="userName" placeholder="your@email.com" />
+              </div>
+              <div class="input-group mb-3" >
+                <span class="input-group-text">Password</span>
+                <input class="form-control" type="password" id="userPassword" placeholder="password" />
+              </div>
+              <button type="button" class="btn btn-primary" onclick="loginUser()">Login</button>
+              <button type="button" class="btn btn-primary" onclick="createUser()">Create</button>
+        </div>
+
+        <!-- Displayed when ready to play -->
+        <div id="playControls" style="display: none">
+            <div id="playerName"></div>
+            <button type="button" class="btn btn-primary" onclick="play()">Play</button>
+            <button type="button" class="btn btn-secondary" onclick="logout()">Logout</button>
+        </div>
+    </div>
+
+    <!-- Error dialog -->
+    <div class="modal fade" id="msgModal" tabindex="-1">
+        <div class="modal-dialog modal-dialog-centered">
+          <div class="modal-content text-dark">
+            <div class="modal-body">error message here</div>
+            <div class="modal-footer">
+              <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+            </div>
+          </div>
+        </div>
+    </div>
+
+
     </main>
     <footer class="container-fluid">
         <span>Tran Diep</span>
