--- a/public/index.html
+++ b/public/index.html
@@ -15,6 +15,7 @@
       crossorigin="anonymous"
     />
     <script defer src="login.js"></script>
+    <link rel="icon" type="image/x-icon" href="/favicon.ico">
     <title>Sing Like Billy</title>
 </head>
 <body>
